# Forum

./: .gitignore
backend/: pyproject.toml
backend/forum/forum/: settings.py  urls.py
backend/forum/main/: admin.py  models.py  serializers.py  urls.py  views.py
backend/forum/main/migrations/: 0001_initial.py
frontend/forum/: package.json
frontend/forum/features/banner/: index.module.css  index.tsx
frontend/forum/features/page-wrapper/: index.module.css  index.tsx
frontend/forum/features/page-wrapper/banner/: index.module.css  index.tsx
frontend/forum/features/page-wrapper/base-nav/: index.module.css  index.tsx
frontend/forum/features/page-wrapper/desktop-nav/: index.module.css  index.tsx
frontend/forum/features/page-wrapper/mobile-nav/: index.module.css  index.tsx
frontend/forum/features/page-wrapper/search-bar/: index.module.css  index.tsx
frontend/forum/features/posts/: types.ts
frontend/forum/features/posts/post/: index.module.css  index.tsx
frontend/forum/features/posts/posts-container/: index.module.css  index.tsx
frontend/forum/hooks/: use-is-mobile.ts  use-window-size.tsx
frontend/forum/pages/: 404.tsx  _app.tsx  globals.css  index.tsx  questions.tsx
frontend/forum/pages-styles/: 404.module.css  globals.css
frontend/forum/utils/: class-names.ts  pages-links.ts  time-formatter.ts
